[package]
name = "swapv3-client"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
clap = { version = "3.2.22", features = ["derive"] }
solana-client = "1.18.15"
solana-program = "1.18.15"
solana-sdk = "1.18.15"
tokio = { version = "1", features = ["full"] }
swapv3 = { path = "..", features = ["no-entrypoint"] }